--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,21 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="app">
+    <p>{{name}}</p>
+    <span>{{age}}</span>
+  </div>
 <script src="/dist/umd/vue.js"></script>
 <script>
 let vm = new Vue({
   el: "#app",
   data() {
     return {
-      name: [{a:1}, {b: 2}]
+      name: 'zs',
+      age: 18
     }
   },
-  computted() {},
-  watch() {}
 })
-vm._data.name.push({name: 2})
-console.log(vm._data)
 </script>
 </body>
 </html>
