--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="app">
+  <div id="app">  hello
     <p>{{name}}</p>
     <span>{{age}}</span>
   </div>
