--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="app" style="color: red;font-size: 14px">
-    <p>{{name}}</p>
+    <p>hello {{name}}</p>
     <span>{{age}}</span>
   </div>
 <script src="/dist/umd/vue.js"></script>
